Fix tables vertical aligning (for fix btn size)

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -72,6 +72,7 @@ label {
 
 .tables {
   display: flex;
+  align-items: flex-start;
 }
 
 table {
